--- a/package.json
+++ b/package.json
@@ -2,21 +2,36 @@
   "name": "task-manager-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.57",
-    "@types/react": "^18.2.25",
-    "@types/react-dom": "^18.2.10",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "@emotion/react": "latest",
+    "@emotion/styled": "latest",
+    "@mui/icons-material": "^5.14.12",
+    "@mui/material": "latest",
+    "@mui/styles": "^5.14.11",
+    "@testing-library/jest-dom": "latest",
+    "@testing-library/react": "latest",
+    "@testing-library/user-event": "latest",
+    "axios": "latest",
+    "formik": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "react-query": "latest",
+    "react-router-dom": "^6.16.0",
+    "web-vitals": "latest",
+    "yup": "latest"
+  },
+  "devDependencies": {
+    "@types/jest": "latest",
+    "@types/node": "latest",
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
+    "prettier": "^2.4.1",
+    "react-scripts": "latest",
+    "typescript": "latest"
   },
   "scripts": {
+    "dev": "HTTPS=true react-scripts start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
